# NewsPulse

./: .env.example  .gitignore  3-原生AI工作流重构设计.md  4-整架构清理实施任务表.md  5-数据流主链路精细化重构备忘.md  README.md  REFACTOR_BACKLOG.md  pyproject.toml  requirements.txt  version_configs
config/: ai_analysis_prompt.txt  ai_insight_item_prompt.txt  ai_interests.txt  config.yaml  frequency_words.txt  global_insight_prompt.txt  timeline.yaml
docs/: appcontext-refactor-design.md  newspulse-optimization-plan-20260428.md  provider-native-ai-runtime-spec-index.md
newspulse/: 3-原生AI工作流重构设计.md  REFACTOR_BACKLOG.md  __init__.py  __main__.py  context.py  requirements.txt  version_configs  当前源配置清单.md
tests/: __init__.py  test_ai_runtime_adapters.py  test_ai_runtime_families.py  test_ai_runtime_live.py  test_ai_runtime_resolver.py  test_builtin_sources.py  test_cli_main.py  test_context.py  test_context_insight.py  test_context_insight_live.py  test_context_selection.py  test_context_selection_live.py  test_crawler_review.py  test_insight_prompt_templates.py  test_legacy_cleanup.py  test_loader.py  test_preflight.py  test_render_title_formatter.py  test_review_entrypoints.py  test_review_helpers.py  test_runner_news_runner.py  test_runner_runtime.py  test_runtime_insight.py  test_runtime_insight_live.py  test_runtime_selection.py  test_runtime_selection_live.py  test_runtime_settings.py  test_storage_article_content_repo.py  test_storage_manager.py  test_storage_review.py  test_storage_stage2.py  test_utils_logging.py  test_utils_time.py  test_workflow_ai_runtime.py  test_workflow_contracts.py  (+32 more)
(+291 files in other folders)
