[project]
name = "newspulse"
version = "1.0.0"
description = "NewsPulse - local hot topics aggregation and analysis tool"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.2",
    "requests==2.33.0",
    "pytz==2026.1",
    "PyYAML==6.0.3",
    "feedparser==6.0.12",
    "beautifulsoup4==4.13.4",
    "lxml==5.4.0",
    "openai==2.24.0",
    "anthropic==0.76.0",
    "json-repair==0.58.6",
    "tenacity==8.5.0",
]

[project.scripts]
newspulse = "newspulse.__main__:main"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["newspulse"]

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
